Fix dark mode for call settings

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -7291,6 +7291,8 @@ button.module-image__border-overlay:focus {
 
   select {
     @include font-body-1;
+    background: $color-gray-75;
+    color: $color-gray-02;
     -webkit-appearance: none;
     border-radius: 4px;
     border: 1px solid $color-gray-45;
